<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="330dp"
    android:layout_height="350dp">
    <TextView
        android:id="@+id/getListCom"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <EditText
        android:id="@+id/searchZoneText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:drawableEnd="@drawable/ic_baseline_search_24"
        android:hint="@string/search"
        android:textColor="@color/dark_blue_3"
        android:textColorHint="@color/layer1" />
    <LinearLayout
        android:id="@+id/headerComp2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:layout_margin="2dp"
        android:visibility="gone"
        android:padding="2dp"
        android:layout_gravity="center"
        android:background="@drawable/back_without_border"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView

            android:visibility="visible"
            android:text="@string/CONO"
            android:layout_weight="3"
            android:gravity="center"
            android:textColor="@color/dark_blue_3"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
        <TextView
            android:id="@+id/headerComp12"
            android:visibility="visible"
            android:text="@string/COYear"
            android:layout_weight="3"
            android:textColor="@color/dark_blue_3"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
        <TextView
            android:id="@+id/headerComp"
            android:visibility="visible"
            android:layout_weight="2"
            android:text="@string/ComName"
            android:textColor="@color/dark_blue_3"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listViewEngineering"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:divider="@color/layer6"
        android:dividerHeight="1dp"
        android:visibility="visible"
        android:background="@drawable/edittext_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_send"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/done_button"
            android:elevation="5dp"
            android:gravity="center"
            android:onClick="addToHoldList"
            android:text="@string/ok"
            android:textColor="@color/darkblue_" />
    </LinearLayout>

</LinearLayout>