<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">
<!--<HorizontalScrollView-->
<!--    android:layout_width="match_parent"-->
<!--    android:fillViewport="true"-->
<!--    android:layout_height="match_parent"-->
<!--    android:scrollbars="horizontal">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="3dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="4dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:text="@string/from" />

        <TextView
            android:id="@+id/to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="start"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:text="@string/to" />


        <TextView
            android:id="@+id/itemcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="start"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:text="@string/itemCode" />

        <TextView
            android:id="@+id/tblqty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1.1"
            android:textFontWeight="10"
            android:gravity="center"
            android:maxLines="1"
            android:padding="2dp"
            android:enabled="false"

            android:inputType="number"
            android:textColor="@color/white"
            android:textSize="12sp" />






    </LinearLayout>

<!--</HorizontalScrollView>-->
</LinearLayout>