<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    android:layout_height="350dp"
    android:orientation="vertical">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:layout_weight="5"
        android:background="@drawable/back_without_border"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="2dp"
        android:visibility="gone">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/CONO"
            android:textColor="@color/dark_blue_3"

            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/headerComp12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/COYear"
            android:textColor="@color/dark_blue_3"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/headerComp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/ComName"
            android:textColor="@color/dark_blue_3"
            android:textStyle="bold"
            android:visibility="visible" />
    </LinearLayout>

    <ListView
        android:id="@+id/DIsh_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/edittext_back"


        android:divider="@color/layer6"
        android:dividerHeight="1dp"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="5"
        android:gravity="center"
        android:orientation="horizontal">


    </LinearLayout>

</LinearLayout>