<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:drawableEndCompat="@drawable/ic_baseline_clear_24" />

     </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_height="30dp"
            android:layout_width="40dp"
            android:src="@drawable/lockred2"/>
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorblue_dark"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:text="@string/enter_password" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="62dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:layout_marginEnd="62dp"
        android:layout_weight="6.5"
        android:background="@drawable/blue_border_rounded_cornwe">
        <!-- INPUT -->
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:inputType="number"
            android:maxLines="1"
            android:padding="1dp"
            android:layout_height="match_parent"
            android:hint="@string/userNum">

        </EditText>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="6.5"
        android:background="@drawable/blue_border_rounded_cornwe">
        <!-- INPUT -->
        <EditText
            android:id="@+id/pass1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_password"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:padding="1dp"
            android:textAlignment="viewStart"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:layout_gravity="top|center"
        android:gravity="top|center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lo2"
                    android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            />
        <Button
            android:id="@+id/set_authentic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/loginbtn"
            android:fontFamily="@font/poppins_medium"
            android:padding="2dp"
            android:textStyle="bold"
            android:text="@string/save"
            android:textColor="#ffffff"
            android:textSize="16sp" />
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            />


    </LinearLayout>
</LinearLayout>