<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="330dp"
    android:layout_height="300dp"
    android:background="@color/white"
    android:layoutDirection="locale"
    android:orientation="vertical"

    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:paddingStart="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:src="@drawable/lockred2" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/enter_password"
            android:textColor="@color/colorblue_dark"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp">

        <EditText
            android:id="@+id/passwordFromAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/back_border_edit"
            android:ems="10"
            android:inputType="numberPassword"
            android:paddingStart="10dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/passwordd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/back_border_edit"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingStart="10dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="5dp">

        <Button
            android:id="@+id/done"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/done_button"
            android:imeOptions="actionDone"
            android:text="@string/app_done"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:ignore="TextViewEdits" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/cancel_button"
            android:text="@string/cancel"
            android:textColor="@color/red"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>